feat(consumer, metrics): add metrics by day route
