# consumer/cmd/api/main.go
@@ -68,6 +68,7 @@ func main() {
 	r := gin.Default()
 
 	r.GET("/events", eventsController.Fetch)
+	r.GET("/metrics-by-day", eventsController.GetMetricsByDay)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	go r.Run(":3333")
