# consumer/docs/swagger.yaml
@@ -21,6 +21,15 @@ definitions:
       page:
         type: integer
     type: object
+  entities.Metrics:
+    properties:
+      averageValue:
+        type: number
+      count:
+        type: integer
+      eventType:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -64,4 +73,38 @@ paths:
       summary: Get events
       tags:
       - Events
+  /metrics-by-day:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves metrics reading the db by a given date
+      parameters:
+      - description: Date to filter metrics
+        in: query
+        name: date
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Metrics'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get metrics by day
+      tags:
+      - Metrics
 swagger: "2.0"
