# consumer/internal/controllers/events.go
@@ -3,19 +3,21 @@ package controllers
 import (
 	"consumer/internal/entities"
 	"consumer/internal/services"
+	"consumer/internal/utils"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/gin-gonic/gin"
 )
 
 type EventsController struct {
-	eventService *services.EventsService
+	eventsService *services.EventsService
 }
 
 func NewEventsController(eventsService *services.EventsService) *EventsController {
 	return &EventsController{
-		eventService: eventsService,
+		eventsService: eventsService,
 	}
 }
 
@@ -47,9 +49,9 @@ func (eventsController *EventsController) Fetch(ctx *gin.Context) {
 		return
 	}
 
-	events, totalItems, err := eventsController.eventService.Fetch(ctx, pageInt, limitInt)
+	events, totalItems, err := eventsController.eventsService.Fetch(ctx, pageInt, limitInt)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "INTERNAL_ERROR"})
 		return
 	}
 
@@ -58,6 +60,43 @@ func (eventsController *EventsController) Fetch(ctx *gin.Context) {
 		Limit:  int64(limitInt),
 		Count:  totalItems,
 		Events: events,
+	}
+
+	ctx.JSON(http.StatusOK, response)
+}
+
+// GetMetricsByDay returns some event metrics by a given date
+// @Summary Get metrics by day
+// @Description Retrieves metrics reading the db by a given date
+// @Tags Metrics
+// @Accept json
+// @Produce json
+// @Param date query string false "Date to filter metrics"
+// @Success 200 {array} entities.Metrics
+// @Failure 400 {object} map[string]string "Bad request"
+// @Failure 500 {object} map[string]string "Internal server error"
+// @Router /metrics-by-day [get]
+func (eventsController *EventsController) GetMetricsByDay(ctx *gin.Context) {
+	date := ctx.DefaultQuery("date", time.Now().Add(-3*time.Hour).Format("2006-01-02"))
+
+	start, end, err := utils.GetUnixStartAndEndOfDay(date)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "INTERNAL_ERROR"})
+		return
+	}
+
+	metrics, err := eventsController.eventsService.GetMetrics(ctx, start, end)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "INTERNAL_ERROR"})
+		return
+	}
+
+	var response []entities.Metrics
+
+	if len(metrics) == 0 {
+		response = []entities.Metrics{}
+	} else {
+		response = metrics
 	}
 
 	ctx.JSON(http.StatusOK, response)
