# consumer/internal/entities/Metrics.go
@@ -1,0 +1,7 @@
+package entities
+
+type Metrics struct {
+	EventType    string  `json:"eventType"`
+	Count        int64   `json:"count"`
+	AverageValue float64 `json:"averageValue"`
+}
